first-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: smartnotes
  labels:
    app: smartnotes
spec:
  containers:
    - name: smartnotes
      image: apoorvabhishek/smartnotes:1.0
