first-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: smartnotes
spec:
  selector: 
    app: smartnotes
  ports:
  - name: http
    port: 8000
    targetPort: 8000
    # nodePort: 30080
  # type: NodePort
  type: ClusterIP
