ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: basic-routing
spec:
  rules:
  - host: smartnotes-apoorvabhishek2020-dev.apps.sandbox-m2.ll9k.p1.openshiftapps.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: smartnotes
            port:
              number: 8000
